@@ -2,9 +2,9 @@ package com.hartwig.hmftools.lilac.coverage;
 
 import static java.lang.Math.round;
 
-import static com.hartwig.hmftools.lilac.LilacConstants.EXPECTED_ALLELE_COUNT;
-import static com.hartwig.hmftools.lilac.LilacConstants.GENE_IDS;
+import static com.hartwig.hmftools.lilac.ReferenceData.GENE_CACHE;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -22,8 +22,11 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
     private final List<AlleleCoverage> mAlleleCoverage;
 
     // computed values
+    private double mCohortFrequencyPenalty;
     private double mCohortFrequencyTotal;
     private double mScore;
+    private double mComplexityPenalty;
+    private int mComplexity;
     private final int mHomozygousCount;
     private int mRecoveredCount;
     private int mWildcardCount;
@@ -42,6 +45,9 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
         mWildcardCount = 0;
         mCohortFrequencyTotal = 0;
         mScore = 0;
+        mComplexityPenalty = 0;
+        mComplexity = 0;
+        mCohortFrequencyPenalty = 0;
     }
 
     public List<AlleleCoverage> getAlleleCoverage() { return mAlleleCoverage; }
@@ -50,6 +56,8 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
     {
         return mAlleleCoverage.stream().map(x -> x.Allele).collect(Collectors.toList());
     }
+
+    public HlaComplex toComplex() { return new HlaComplex(getAlleles()); }
 
     public double cohortFrequencyTotal() { return mCohortFrequencyTotal; }
     public void setCohortFrequencyTotal(double total) { mCohortFrequencyTotal = total; }
@@ -64,7 +72,11 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
 
     private int calcHomozygousCount()
     {
-        return EXPECTED_ALLELE_COUNT - getAlleles().size();
+        // for unit tests
+        if(GENE_CACHE == null)
+            return 0;
+
+        return GENE_CACHE.ExpectAlleleCount - getAlleles().size();
     }
 
     public boolean isHomozygous(final HlaAllele allele)
@@ -74,20 +86,28 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
 
     public void setScore(double score) { mScore = score; }
     public double getScore() { return mScore; }
+    public void setComplexityPenalty(double complexityPenalty) { mComplexityPenalty = complexityPenalty; }
+    public double getComplexityPenalty() { return mComplexityPenalty; }
+    public void setComplexity(int complexity) { mComplexity = complexity; }
+    public int getComplexity() { return mComplexity; }
+    public void setCohortFrequencyPenalty(double cohortFrequencyPenalty) { mCohortFrequencyPenalty = cohortFrequencyPenalty; }
+    public double getCohortFrequencyPenalty() { return mCohortFrequencyPenalty; }
 
     public void expandToSixAlleles()
     {
-        if(mAlleleCoverage.size() == EXPECTED_ALLELE_COUNT)
+        if(mAlleleCoverage.size() == GENE_CACHE.ExpectAlleleCount)
             return;
 
         // split homozygous allele coverage, and fill any missing allele if there was zero support
 
-        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().collect(Collectors.toList());
+        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().toList();
         mAlleleCoverage.clear();
 
-        for(String gene : GENE_IDS)
+        for(String gene : GENE_CACHE.GeneIds)
         {
-            List<AlleleCoverage> geneCoverage = existingCoverage.stream().filter(x -> x.Allele.Gene.equals(gene)).collect(Collectors.toList());
+            List<AlleleCoverage> geneCoverage = existingCoverage.stream()
+                    .filter(x -> x.Allele.Gene.equals(gene))
+                    .collect(Collectors.toList());
 
             if(geneCoverage.size() == 2)
             {
@@ -102,7 +122,7 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
 
     private static List<AlleleCoverage> splitHomozygousCoverage(final List<AlleleCoverage> coverage)
     {
-        if (coverage.size() != 1)
+        if(coverage.size() != 1)
             return coverage;
 
         AlleleCoverage single = coverage.get(0);
@@ -115,19 +135,19 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
         AlleleCoverage remainder = new AlleleCoverage(single.Allele,
                 single.UniqueCoverage - first.UniqueCoverage,
                 single.SharedCoverage - first.SharedCoverage,
-                single.WildCoverage - single.WildCoverage);
+                0.0);
 
         List<AlleleCoverage> newCoverage = Lists.newArrayList(first, remainder);
         return newCoverage;
     }
 
-    public void populateMissingCoverage(final List<HlaAllele> alleles)
+    public void populateMissingCoverage(final Iterable<HlaAllele> alleles)
     {
-        if(mAlleleCoverage.size() == EXPECTED_ALLELE_COUNT)
+        if(mAlleleCoverage.size() == GENE_CACHE.ExpectAlleleCount)
             return;
 
         // fill any missing allele if there was zero support
-        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().collect(Collectors.toList());
+        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().toList();
         mAlleleCoverage.clear();
 
         for(HlaAllele allele : alleles)
@@ -163,7 +183,7 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
         return 0;
     }
 
-    public static ComplexCoverage create(final List<AlleleCoverage> alleles)
+    public static ComplexCoverage create(final Iterable<AlleleCoverage> alleles)
     {
         int unique = 0;
         double shared = 0.0;
@@ -175,14 +195,14 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
             wild += coverage.WildCoverage;
         }
 
-        final List<AlleleCoverage> sortedAlleles = alleles.stream().collect(Collectors.toList());
+        final List<AlleleCoverage> sortedAlleles = Lists.newArrayList(alleles);
         Collections.sort(sortedAlleles, new AlleleCoverage.AlleleSorter());
 
-        return new ComplexCoverage(unique, (int)round(shared), (int)round(wild), sortedAlleles);
+        return new ComplexCoverage(unique, (int) round(shared), (int) round(wild), sortedAlleles);
     }
 
     public String toString()
     {
-        return String.format("alleles(%s) coverage(%d) score(%.2f)", HlaAllele.toString(getAlleles()), TotalCoverage, mScore);
+        return String.format("alleles(%s) coverage(%d) score(%.2f) complexityPenalty(%.2f)", HlaAllele.toString(getAlleles()), TotalCoverage, mScore, mComplexityPenalty);
     }
 }
