@@ -1,65 +1,72 @@
 package com.hartwig.hmftools.lilac.evidence;
 
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
+import static com.hartwig.hmftools.lilac.LilacConstants.MIN_DEPTH_FILTER;
+import static com.hartwig.hmftools.lilac.LilacConstants.MIN_EVIDENCE_FACTOR;
+import static com.hartwig.hmftools.lilac.fragment.AminoAcidFragmentPipeline.RAW_REF_AMINO_ACID_COUNTS;
 import static com.hartwig.hmftools.lilac.seq.HlaSequence.WILD_STR;
 
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.Lists;
-import com.hartwig.hmftools.lilac.LilacConfig;
-import com.hartwig.hmftools.lilac.ReferenceData;
-import com.hartwig.hmftools.lilac.seq.SequenceCount;
+import com.google.common.collect.Sets;
 import com.hartwig.hmftools.lilac.fragment.Fragment;
 import com.hartwig.hmftools.lilac.hla.HlaAllele;
 import com.hartwig.hmftools.lilac.hla.HlaContext;
 import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
+import com.hartwig.hmftools.lilac.seq.SequenceCount;
 
 public final class Candidates
 {
-    private final double mMinEvidence;
     private final List<HlaSequenceLoci> mNucleotideSequences;
     private final List<HlaSequenceLoci> mAminoAcidSequences;
 
-    public Candidates(
-            double minEvidence, final List<HlaSequenceLoci> nucleotideSequences, final List<HlaSequenceLoci> aminoAcidSequences)
+    public Candidates(final List<HlaSequenceLoci> nucleotideSequences, final List<HlaSequenceLoci> aminoAcidSequences)
     {
-        mMinEvidence = minEvidence;
         mNucleotideSequences = nucleotideSequences;
         mAminoAcidSequences = aminoAcidSequences;
     }
 
-    public final List<HlaAllele> unphasedCandidates(final HlaContext context, final List<Fragment> fragments, final List<HlaAllele> commonAllles)
+    public List<HlaAllele> unphasedCandidates(final HlaContext context, final List<Fragment> fragments, final Collection<HlaAllele> commonAllles)
     {
         List<Integer> aminoAcidBoundary = context.AminoAcidBoundaries;
 
-        LL_LOGGER.info("gene({}) determining un-phased candidates from frags({})", context.geneName(), fragments.size());
+        LL_LOGGER.debug("gene({}) determining un-phased candidates from frags({})", context.geneName(), fragments.size());
 
-        SequenceCount aminoAcidCounts = SequenceCount.aminoAcids(mMinEvidence, fragments);
+        SequenceCount aminoAcidCounts = SequenceCount.buildFromAminoAcids(MIN_EVIDENCE_FACTOR, fragments);
 
         List<HlaSequenceLoci> geneCandidates = mAminoAcidSequences.stream()
                 .filter(x -> x.Allele.Gene.equals(context.Gene)).collect(Collectors.toList());
 
-        LL_LOGGER.debug("  {} candidates before filtering", geneCandidates.size());
+        LL_LOGGER.debug("gene({}) {} candidates before filtering", context.geneName(), geneCandidates.size());
 
         // Amino acid filtering
-        List<HlaSequenceLoci> aminoAcidCandidates = filterSequencesByMinSupport(geneCandidates, aminoAcidCounts, context.AminoAcidBoundaries);
+        List<HlaSequenceLoci> aminoAcidCandidates = filterSequencesByMinSupport(geneCandidates, aminoAcidCounts,
+                Sets.newTreeSet(context.AminoAcidBoundaries), RAW_REF_AMINO_ACID_COUNTS.get(context.geneName()));
 
         List<HlaAllele> aminoAcidCandidateAlleles = aminoAcidCandidates.stream().map(x -> x.Allele).collect(Collectors.toList());
 
         List<HlaAllele> aminoAcidSpecificAllelesCandidates = aminoAcidCandidateAlleles.stream()
-                .map(x -> x.asFourDigit()).collect(Collectors.toList());
+                .map(HlaAllele::asFourDigit).toList();
 
         if(aminoAcidSpecificAllelesCandidates.isEmpty())
         {
-            LL_LOGGER.warn("  no candidates after amino acid filtering - reverting to common allele gene candidates");
+            LL_LOGGER.warn("gene({}) no candidates after amino acid filtering - reverting to common allele gene candidates",
+                    context.geneName());
+
             return commonAllles.stream().filter(x -> x.Gene.equals(context.Gene)).collect(Collectors.toList());
         }
 
-        LL_LOGGER.info("  {} candidates after amino acid filtering", aminoAcidCandidates.size());
+        LL_LOGGER.info("gene({}) {} candidates after amino acid filtering", context.geneName(), aminoAcidCandidates.size());
 
         // Nucleotide filtering
-        NucleotideFiltering nucleotideFiltering = new NucleotideFiltering(mMinEvidence, aminoAcidBoundary);
+        NucleotideFiltering nucleotideFiltering = new NucleotideFiltering(aminoAcidBoundary);
 
         List<HlaSequenceLoci> nucleotideCandidatesAfterAminoAcidFiltering = mNucleotideSequences.stream()
                 .filter(x -> aminoAcidSpecificAllelesCandidates.contains(x.Allele.asFourDigit()))
@@ -73,33 +80,37 @@ public final class Candidates
 
         if(nucleotideSpecificAllelesCandidates.isEmpty())
         {
-            LL_LOGGER.warn("  0 candidates after exon boundary filtering - reverting to amino acid candidates");
+            LL_LOGGER.warn("gene({}) 0 candidates after exon boundary filtering - reverting to amino acid candidates", context.geneName());
             return aminoAcidCandidateAlleles;
         }
 
-        LL_LOGGER.info("  {} candidates after exon boundary filtering", nucleotideSpecificAllelesCandidates.size());
+        LL_LOGGER.info("gene({}) {} candidates after exon boundary filtering",
+                context.geneName(), nucleotideSpecificAllelesCandidates.size());
+
         return nucleotideSpecificAllelesCandidates;
     }
 
-    private List<HlaSequenceLoci> filterSequencesByMinSupport(
-            final List<HlaSequenceLoci> candidates, final SequenceCount aminoAcidCount, final List<Integer> aminoAcidBoundaries)
+    @VisibleForTesting
+    public static List<HlaSequenceLoci> filterSequencesByMinSupport(final Collection<HlaSequenceLoci> candidates,
+            final SequenceCount aminoAcidCount, final Set<Integer> aminoAcidBoundaries, final SequenceCount rawAminoAcidCounts)
     {
         // eliminate sequences without min support for their amino acid at each loco, ignoring exon boundaries
         List<HlaSequenceLoci> candidateSequences = Lists.newArrayList();
         candidateSequences.addAll(candidates);
 
-        for(int locus = 0; locus < aminoAcidCount.getLength(); ++locus)
+        for(final int locus : aminoAcidCount.seqCountsByLoci().keySet())
         {
             if(aminoAcidBoundaries.contains(locus))
                 continue;
 
-            List<String> expectedSequences = aminoAcidCount.getMinCountSequences(locus);
+            if(rawAminoAcidCounts.get(locus).size() < MIN_DEPTH_FILTER)
+                continue;
 
+            Set<String> expectedSequences = Sets.newHashSet(aminoAcidCount.getMinEvidenceSequences(locus));
             if(expectedSequences.isEmpty())
                 continue;
 
             int index = 0;
-            // List<HlaAllele> removedAlleles = Lists.newArrayList();
             while(index < candidateSequences.size())
             {
                 HlaSequenceLoci sequence = candidateSequences.get(index);
@@ -116,30 +127,22 @@ public final class Candidates
                 }
 
                 candidateSequences.remove(index);
-                // removedAlleles.add(sequence.Allele);
             }
-
-            /*
-            if(!removedAlleles.isEmpty())
-            {
-                LL_LOGGER.debug("locus({}) seq({}) removed {} alleles: {}",
-                        locus, expectedSequences, removedAlleles.size(), HlaAllele.toString(removedAlleles, 50));
-            }
-            */
         }
 
         return candidateSequences;
     }
 
     public List<HlaAllele> phasedCandidates(
-            final HlaContext context, final List<HlaAllele> unphasedCandidateAlleles, final List<PhasedEvidence> phasedEvidence)
+            final HlaContext context, final Set<HlaAllele> unphasedCandidateAlleles, final Iterable<PhasedEvidence> phasedEvidence)
     {
-        LL_LOGGER.debug("determining phased candidate set for gene {}", context.geneName());
+        LL_LOGGER.debug("gene({}) determining phased candidate set", context.geneName());
 
         List<HlaSequenceLoci> unphasedCandidates = mAminoAcidSequences.stream()
                 .filter(x -> unphasedCandidateAlleles.contains(x.Allele.asFourDigit())).collect(Collectors.toList());
 
-        List<HlaSequenceLoci> phasedCandidates = filterCandidates(unphasedCandidates, phasedEvidence);
+        List<HlaSequenceLoci> phasedCandidates = filterCandidates(
+                unphasedCandidates, phasedEvidence, RAW_REF_AMINO_ACID_COUNTS.get(context.geneName()));
         List<HlaAllele> phasedAlleles = phasedCandidates.stream().map(x -> x.Allele).collect(Collectors.toList());
 
         LL_LOGGER.info("gene({}) has {} candidates after phasing: {}",
@@ -148,40 +151,46 @@ public final class Candidates
         return phasedAlleles;
     }
 
-    private List<HlaSequenceLoci> filterCandidates(final List<HlaSequenceLoci> initialCandidates, final List<PhasedEvidence> evidence)
+    @VisibleForTesting
+    public static List<HlaSequenceLoci> filterCandidates(
+            final Collection<HlaSequenceLoci> initialCandidates, final Iterable<PhasedEvidence> evidence, final SequenceCount rawAminoAcidCounts)
     {
         List<HlaSequenceLoci> candidates = Lists.newArrayList();
         candidates.addAll(initialCandidates);
 
-        for(int i = 0; i < evidence.size(); ++i)
+        for(PhasedEvidence newEvidence : evidence)
         {
-            PhasedEvidence newEvidence = evidence.get(i);
+            List<Integer> targetLoci = newEvidence.getAminoAcidLoci();
+            List<StringBuilder> targetSequenceBuilders = newEvidence.getEvidence().keySet().stream()
+                    .map(StringBuilder::new)
+                    .toList();
 
-            candidates = candidates.stream()
-                .filter(x -> x.consistentWithAny(
-                        newEvidence.getEvidence().keySet().stream().collect(Collectors.toList()), newEvidence.getAminoAcidLoci()))
-                .collect(Collectors.toList());
+            List<Integer> lowDepthIndices = Lists.newArrayList();
+            for(int j = 0; j < targetLoci.size(); j++)
+            {
+                int locus = targetLoci.get(j);
+                if(rawAminoAcidCounts.get(locus).size() < MIN_DEPTH_FILTER)
+                    lowDepthIndices.add(j);
+            }
+
+            if(lowDepthIndices.size() >= targetLoci.size() - 1)
+                continue;
+
+            if(!lowDepthIndices.isEmpty())
+            {
+                Collections.sort(lowDepthIndices, Comparator.comparingInt((Integer x) -> x).reversed());
+                for(int index : lowDepthIndices)
+                {
+                    targetLoci.remove(index);
+                    for(StringBuilder seqBuilder : targetSequenceBuilders)
+                        seqBuilder.deleteCharAt(index);
+                }
+            }
+
+            List<String> targetSequences = targetSequenceBuilders.stream().map(StringBuilder::toString).collect(Collectors.toList());
+            candidates = candidates.stream().filter(x -> x.consistentWithAny(targetSequences, targetLoci)).collect(Collectors.toList());
         }
 
         return candidates;
     }
-
-    public static void addPhasedCandidates(
-            final List<HlaAllele> allAlleles, List<HlaAllele> geneCandidates, final LilacConfig config, final ReferenceData refData)
-    {
-        if(geneCandidates.isEmpty())
-            return;
-
-        if(config.MaxEliminationCandidates == 0 || geneCandidates.size() <= config.MaxEliminationCandidates)
-        {
-            allAlleles.addAll(geneCandidates);
-            return;
-        }
-
-        final String gene = geneCandidates.get(0).Gene;
-
-        refData.getAlleleFrequencies().getAlleleFrequencies().keySet().stream()
-                .filter(x -> x.Gene.equals(gene)).forEach(x -> allAlleles.add(x));
-    }
-
 }
