@@ -1,83 +1,75 @@
 package com.hartwig.hmftools.purple;
 
-import static com.hartwig.hmftools.common.purple.PurpleCommon.purpleGermlineSvFile;
-import static com.hartwig.hmftools.common.purple.PurpleCommon.purpleGermlineVcfFile;
-import static com.hartwig.hmftools.common.purple.PurpleCommon.purpleSomaticSvFile;
-import static com.hartwig.hmftools.common.purple.PurpleCommon.purpleSomaticVcfFile;
-import static com.hartwig.hmftools.common.purple.PurpleQCStatus.MAX_DELETED_GENES;
+import static com.hartwig.hmftools.common.genome.chromosome.GermlineAberration.NONE;
 import static com.hartwig.hmftools.common.purple.GeneCopyNumber.listToMap;
-import static com.hartwig.hmftools.common.utils.PerformanceCounter.runTimeMinsStr;
+import static com.hartwig.hmftools.common.purple.PurpleCommon.purpleGermlineSvFile;
+import static com.hartwig.hmftools.common.purple.PurpleCommon.purpleSomaticSvFile;
+import static com.hartwig.hmftools.common.purple.PurpleQCStatus.FAIL_NO_TUMOR;
+import static com.hartwig.hmftools.common.purple.PurpleQCStatus.MAX_DELETED_GENES;
+import static com.hartwig.hmftools.common.perf.PerformanceCounter.runTimeMinsStr;
 import static com.hartwig.hmftools.common.utils.config.ConfigUtils.addLoggingOptions;
-import static com.hartwig.hmftools.common.utils.version.VersionInfo.fromAppName;
-import static com.hartwig.hmftools.purple.PurpleUtils.PPL_LOGGER;
-import static com.hartwig.hmftools.purple.PurpleSummaryData.createPurity;
-import static com.hartwig.hmftools.purple.segment.Segmentation.validateObservedRegions;
+import static com.hartwig.hmftools.common.utils.config.VersionInfo.fromAppName;
 import static com.hartwig.hmftools.purple.PurpleConstants.TARGET_REGIONS_MAX_DELETED_GENES;
-import static com.hartwig.hmftools.purple.fitting.FittedPurityFactory.createFittedRegionFactory;
+import static com.hartwig.hmftools.purple.PurpleSummaryData.createPurity;
+import static com.hartwig.hmftools.purple.PurpleUtils.PPL_LOGGER;
+import static com.hartwig.hmftools.purple.segment.Segmentation.validateObservedRegions;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
-import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.ListMultimap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
-import com.hartwig.hmftools.common.drivercatalog.AmplificationDrivers;
-import com.hartwig.hmftools.common.drivercatalog.DeletionDrivers;
-import com.hartwig.hmftools.common.drivercatalog.DriverCatalog;
-import com.hartwig.hmftools.common.drivercatalog.DriverCatalogFile;
-import com.hartwig.hmftools.common.genome.chromosome.Chromosome;
+import com.hartwig.hmftools.common.driver.AmplificationDrivers;
+import com.hartwig.hmftools.common.driver.DeletionDrivers;
+import com.hartwig.hmftools.common.driver.DriverCatalog;
+import com.hartwig.hmftools.common.driver.DriverCatalogFile;
 import com.hartwig.hmftools.common.genome.chromosome.CobaltChromosomes;
+import com.hartwig.hmftools.common.purple.FittedPurity;
 import com.hartwig.hmftools.common.purple.FittedPurityMethod;
+import com.hartwig.hmftools.common.purple.FittedPurityRangeFile;
 import com.hartwig.hmftools.common.purple.FittedPurityScore;
 import com.hartwig.hmftools.common.purple.Gender;
-import com.hartwig.hmftools.common.purple.HrdData;
-import com.hartwig.hmftools.common.purple.HrdDataFile;
+import com.hartwig.hmftools.common.purple.GeneCopyNumber;
+import com.hartwig.hmftools.common.purple.GeneCopyNumberFile;
+import com.hartwig.hmftools.common.purple.GermlineDeletion;
+import com.hartwig.hmftools.common.purple.GermlineStatus;
 import com.hartwig.hmftools.common.purple.ImmutableFittedPurity;
 import com.hartwig.hmftools.common.purple.ImmutableFittedPurityScore;
 import com.hartwig.hmftools.common.purple.ImmutablePurityContext;
 import com.hartwig.hmftools.common.purple.ImmutablePurpleQC;
-import com.hartwig.hmftools.common.purple.TumorMutationalStatus;
-import com.hartwig.hmftools.common.utils.config.ConfigBuilder;
-import com.hartwig.hmftools.common.variant.msi.MicrosatelliteStatus;
-import com.hartwig.hmftools.purple.fitting.BestFit;
-import com.hartwig.hmftools.purple.fitting.PurityPloidyFitter;
-import com.hartwig.hmftools.purple.gene.GeneCopyNumberBuilder;
-import com.hartwig.hmftools.purple.hrd.HrdDetection;
-import com.hartwig.hmftools.purple.fitting.PurityAdjuster;
-import com.hartwig.hmftools.common.purple.PurpleQC;
-import com.hartwig.hmftools.common.purple.PurpleCopyNumber;
-import com.hartwig.hmftools.common.purple.PurpleCopyNumberFile;
-import com.hartwig.hmftools.common.purple.GeneCopyNumber;
-import com.hartwig.hmftools.common.purple.GeneCopyNumberFile;
-import com.hartwig.hmftools.common.purple.GermlineDeletion;
-import com.hartwig.hmftools.common.purple.FittedPurity;
-import com.hartwig.hmftools.common.purple.FittedPurityRangeFile;
 import com.hartwig.hmftools.common.purple.PurityContext;
 import com.hartwig.hmftools.common.purple.PurityContextFile;
+import com.hartwig.hmftools.common.purple.PurpleCopyNumber;
+import com.hartwig.hmftools.common.purple.PurpleCopyNumberFile;
+import com.hartwig.hmftools.common.purple.PurpleQC;
+import com.hartwig.hmftools.common.purple.TumorMutationalStatus;
+import com.hartwig.hmftools.common.utils.config.ConfigBuilder;
+import com.hartwig.hmftools.common.utils.config.VersionInfo;
+import com.hartwig.hmftools.common.purple.MicrosatelliteStatus;
+import com.hartwig.hmftools.purple.fitting.BestFit;
+import com.hartwig.hmftools.purple.fitting.PurityAdjuster;
+import com.hartwig.hmftools.purple.fitting.PurityPloidyFitter;
 import com.hartwig.hmftools.purple.fitting.RegionFitCalculator;
-import com.hartwig.hmftools.purple.region.ObservedRegion;
-import com.hartwig.hmftools.purple.segment.SegmentFile;
-import com.hartwig.hmftools.common.utils.version.VersionInfo;
-import com.hartwig.hmftools.common.sv.StructuralVariant;
-import com.hartwig.hmftools.common.variant.hotspot.VariantHotspot;
+import com.hartwig.hmftools.purple.fittingsnv.PeakModelFile;
+import com.hartwig.hmftools.purple.gene.GeneCopyNumberBuilder;
+import com.hartwig.hmftools.purple.germline.ChimerismDetection;
 import com.hartwig.hmftools.purple.germline.GermlineDeletions;
 import com.hartwig.hmftools.purple.germline.GermlineDrivers;
-import com.hartwig.hmftools.purple.fittingsnv.PeakModelFile;
+import com.hartwig.hmftools.purple.germline.GermlineSvCache;
 import com.hartwig.hmftools.purple.germline.GermlineVariants;
 import com.hartwig.hmftools.purple.plot.Charts;
+import com.hartwig.hmftools.purple.region.ObservedRegion;
+import com.hartwig.hmftools.common.purple.PurpleSegment;
 import com.hartwig.hmftools.purple.segment.Segmentation;
 import com.hartwig.hmftools.purple.somatic.SomaticPurityEnrichment;
 import com.hartwig.hmftools.purple.somatic.SomaticStream;
 import com.hartwig.hmftools.purple.somatic.SomaticVariantCache;
-import com.hartwig.hmftools.purple.germline.GermlineSvCache;
 import com.hartwig.hmftools.purple.sv.SomaticSvCache;
 
 import org.jetbrains.annotations.Nullable;
@@ -106,7 +98,12 @@ public class PurpleApplication
             System.exit(1);
         }
 
-        // and common reference data
+        PPL_LOGGER.info("reference({}) tumor({}) {}",
+                mConfig.ReferenceId != null ? mConfig.ReferenceId : "NONE", mConfig.TumorId != null ? mConfig.TumorId : "NONE",
+                mConfig.TargetRegionsMode ? "running on target-regions only" : "");
+
+        PPL_LOGGER.info("output directory: {}", mConfig.OutputDir);
+
         mReferenceData = new ReferenceData(configBuilder, mConfig);
 
         if(!mReferenceData.isValid())
@@ -118,32 +115,34 @@ public class PurpleApplication
         mExecutorService = Executors.newFixedThreadPool(mConfig.Threads);
 
         mGermlineVariants = new GermlineVariants(mConfig, mReferenceData, mPurpleVersion.version());
-
-        mSegmentation = !mConfig.DriversOnly ? new Segmentation(mReferenceData) : null;
+        mSegmentation = new Segmentation(mReferenceData);
     }
 
     public void run()
     {
+        if(!mConfig.Fitting.hasValidValues())
+        {
+            PPL_LOGGER.error("invalid configured fitting values");
+            System.exit(1);
+        }
+
         long startTimeMs = System.currentTimeMillis();
 
         try
         {
-            if(mConfig.DriversOnly)
+            if(!mConfig.SampleFiles.hasValidSampleNames(mConfig))
             {
-                runDriversRoutine(mConfig.TumorId);
+                System.exit(1);
             }
-            else
+
+            final SampleData sampleData = loadSampleData();
+
+            if(sampleData == null)
             {
-                if(!mConfig.SampleFiles.hasValidSampleNames(mConfig))
-                    System.exit(1);
-
-                final SampleData sampleData = loadSampleData();
-
-                if(sampleData == null)
-                    System.exit(1);
-
-                performFit(sampleData);
+                System.exit(1);
             }
+
+            performFit(sampleData);
         }
         catch(Throwable t)
         {
@@ -165,33 +164,28 @@ public class PurpleApplication
 
         final SomaticVariantCache somaticVariantCache = new SomaticVariantCache(mConfig);
 
-        if(!mConfig.DriversOnly)
-        {
-            // load amber and cobalt sample data
-            final AmberData amberData = new AmberData(
-                    mConfig.germlineMode() ? referenceId : tumorId, sampleDataFiles.AmberDirectory, mConfig.germlineMode(),
-                    mReferenceData.RefGenVersion);
+        // load amber and cobalt sample data
+        final AmberData amberData = new AmberData(
+                mConfig.germlineMode() ? referenceId : tumorId, sampleDataFiles.AmberDirectory, mConfig.germlineMode(),
+                mReferenceData.RefGenVersion);
 
-            final CobaltData cobaltData = new CobaltData(
-                    referenceId, tumorId, sampleDataFiles.CobaltDirectory, amberData.PatientGender,
-                    mConfig.tumorOnlyMode(), mConfig.germlineMode());
+        final CobaltData cobaltData = new CobaltData(
+                referenceId, tumorId, sampleDataFiles.CobaltDirectory, amberData.PatientGender,
+                mConfig.tumorOnlyMode(), mConfig.germlineMode());
 
-            // load structural and somatic variants
-            final String outputVcf = purpleSomaticSvFile(mConfig.OutputDir, tumorId);
+        // load structural and somatic variants
+        final String outputVcf = purpleSomaticSvFile(mConfig.OutputDir, tumorId);
 
-            final SomaticSvCache svCache = !sampleDataFiles.SomaticSvVcfFile.isEmpty() ?
-                    new SomaticSvCache(mPurpleVersion.version(), sampleDataFiles.SomaticSvVcfFile, outputVcf, mReferenceData, mConfig)
-                    : new SomaticSvCache();
+        final SomaticSvCache svCache = !sampleDataFiles.SomaticSvVcfFile.isEmpty() ?
+                new SomaticSvCache(mPurpleVersion.version(), sampleDataFiles.SomaticSvVcfFile, outputVcf, mConfig)
+                : new SomaticSvCache();
 
-            sampleData = new SampleData(referenceId, tumorId, amberData, cobaltData, svCache, somaticVariantCache);
-        }
-        else
-        {
-            sampleData = new SampleData(referenceId, tumorId, null, null, null, somaticVariantCache);
-        }
+        sampleData = new SampleData(referenceId, tumorId, amberData, cobaltData, svCache, somaticVariantCache);
 
         if(mConfig.runTumor())
+        {
             somaticVariantCache.loadSomatics(sampleDataFiles.SomaticVcfFile, mReferenceData.SomaticHotspots);
+        }
 
         return sampleData;
     }
@@ -218,10 +212,10 @@ public class PurpleApplication
             PPL_LOGGER.warn("Cobalt gender {} does not match Amber gender {}", cobaltGender, amberGender);
         }
 
-        final CobaltChromosomes cobaltChromosomes = cobaltData.CobaltChromosomes;
-        final SomaticVariantCache somaticCache = mConfig.runTumor() ? sampleData.SomaticCache : null;
+        CobaltChromosomes cobaltChromosomes = cobaltData.CobaltChromosomes;
+        SomaticVariantCache somaticCache = mConfig.runTumor() ? sampleData.SomaticCache : null;
 
-        PPL_LOGGER.info("purple output directory: {}", mConfig.OutputDir);
+        PPL_LOGGER.info("output directory: {}", mConfig.OutputDir);
         mPurpleVersion.write(mConfig.OutputDir);
 
         PPL_LOGGER.info("applying segmentation");
@@ -231,7 +225,7 @@ public class PurpleApplication
         {
             PPL_LOGGER.warn("no valid observed regions created, exiting");
 
-            writeEmptyResultFiles(tumorId, sampleData, sampleDataFiles);
+            writeEmptyResultFiles(tumorId, sampleData, sampleDataFiles, observedRegions);
             System.exit(0);
         }
 
@@ -244,16 +238,35 @@ public class PurpleApplication
         Set<String> reportedGenes = Sets.newHashSet();
         SomaticStream somaticStream = null;
 
-        RegionFitCalculator regionFitCalculator = createFittedRegionFactory(amberData.AverageTumorDepth, cobaltChromosomes, mConfig.Fitting);
+        RegionFitCalculator regionFitCalculator = new RegionFitCalculator(cobaltChromosomes, mConfig.Fitting, amberData.AverageTumorDepth);
+
+        double chimerismPercentage = 0;
 
         if(mConfig.runTumor())
         {
+            ChimerismDetection chimerismDetection = new ChimerismDetection(
+                    amberData, cobaltData, observedRegions, mReferenceData.RefGenVersion);
+
+            chimerismDetection.run();
+
+            if(chimerismDetection.isDetected())
+                chimerismPercentage = chimerismDetection.chimerismLevel();
+
             PPL_LOGGER.info("fitting purity");
 
             PurityPloidyFitter purityPloidyFitter = new PurityPloidyFitter(
-                    mConfig, mReferenceData, sampleData, mExecutorService, regionFitCalculator, observedRegions, mSegmentation);
+                    mConfig, mReferenceData, sampleData, mExecutorService, regionFitCalculator, observedRegions, gender,
+                    chimerismPercentage > 0);
 
             purityPloidyFitter.run();
+
+            if(!purityPloidyFitter.isValid())
+            {
+                PPL_LOGGER.warn("insufficient input Amber and Cobalt data, exiting");
+
+                writeEmptyResultFiles(tumorId, sampleData, sampleDataFiles, observedRegions);
+                System.exit(0);
+            }
 
             fittedRegions.addAll(purityPloidyFitter.fittedRegions());
 
@@ -288,12 +301,6 @@ public class PurpleApplication
             PurpleCopyNumberFile.write(PurpleCopyNumberFile.generateFilenameForWriting(mConfig.OutputDir, tumorId), copyNumbers);
             GeneCopyNumberFile.write(GeneCopyNumberFile.generateFilenameForWriting(mConfig.OutputDir, tumorId), geneCopyNumbers);
             PeakModelFile.write(PeakModelFile.generateFilename(mConfig.OutputDir, tumorId), somaticStream.peakModelData());
-
-            if(mReferenceData.TargetRegions.hasTargetRegions())
-            {
-                HrdData hrdData = new HrdDetection().calculateHrdData(copyNumbers);
-                HrdDataFile.write(mConfig.OutputDir, tumorId, hrdData);
-            }
         }
         else
         {
@@ -301,16 +308,21 @@ public class PurpleApplication
             fittedRegions.addAll(regionFitCalculator.fitRegion(bestFit.Fit.purity(), bestFit.Fit.normFactor(), observedRegions));
         }
 
-        PPL_LOGGER.info("generating QC Stats");
+        PPL_LOGGER.debug("generating QC stats");
+
         final PurpleQC qcChecks = PurpleSummaryData.createQC(
                 amberData.Contamination, bestFit, amberGender, cobaltGender, copyNumbers, geneCopyNumbers,
                 cobaltChromosomes.germlineAberrations(), amberData.AverageTumorDepth,
-                mConfig.TargetRegionsMode ? TARGET_REGIONS_MAX_DELETED_GENES : MAX_DELETED_GENES);
+                mConfig.TargetRegionsMode ? TARGET_REGIONS_MAX_DELETED_GENES : MAX_DELETED_GENES,
+                somaticCache != null ? somaticCache.tincLevel() : 0, chimerismPercentage);
 
-        final PurityContext purityContext = createPurity(bestFit, gender, mConfig, qcChecks, copyNumbers, somaticStream, sampleData.SvCache);
+        final PurityContext purityContext = createPurity(
+                bestFit, gender, mConfig, qcChecks, copyNumbers, somaticStream, sampleData.SvCache);
 
         PurityContextFile.write(mConfig.OutputDir, tumorId, purityContext);
-        SegmentFile.write(SegmentFile.generateFilename(mConfig.OutputDir, tumorId), fittedRegions);
+
+        List<PurpleSegment> segments = fittedRegions.stream().map(x -> x.toSegment()).collect(Collectors.toList());
+        PurpleSegment.write(PurpleSegment.generateFilename(mConfig.OutputDir, tumorId), segments);
 
         GermlineDeletions germlineDeletions = null;
 
@@ -324,7 +336,7 @@ public class PurpleApplication
             if(!sampleDataFiles.GermlineSvVcfFile.isEmpty())
             {
                 germlineSvCache = new GermlineSvCache(
-                        mPurpleVersion.version(), sampleDataFiles.GermlineSvVcfFile, mReferenceData, mConfig,
+                        mPurpleVersion.version(), sampleDataFiles.GermlineSvVcfFile, mConfig,
                         fittedRegions, copyNumbers, purityContext);
 
                 germlineSvCache.write(purpleGermlineSvFile(mConfig.OutputDir, tumorId));
@@ -342,6 +354,13 @@ public class PurpleApplication
             GermlineDeletion.write(GermlineDeletion.generateFilename(mConfig.OutputDir, tumorId), germlineDeletions.getDeletions());
         }
 
+        List<DriverSourceData> driverSourceData = Lists.newArrayList();
+
+        if(mConfig.RunDrivers)
+        {
+            findDrivers(tumorId, purityContext, geneCopyNumbers, somaticStream, germlineDeletions, driverSourceData);
+        }
+
         if(!mConfig.germlineMode() && !mConfig.Charting.Disabled)
         {
             PPL_LOGGER.info("generating charts");
@@ -350,10 +369,13 @@ public class PurpleApplication
             {
                 Charts charts = new Charts(mConfig, mExecutorService, mReferenceData.RefGenVersion.is38());
 
+                List<ObservedRegion> regionsForVis = fittedRegions.stream()
+                        .filter(x -> x.germlineStatus() != GermlineStatus.EXCLUDED).collect(Collectors.toList());
+
                 charts.write(
                         referenceId, tumorId, !sampleDataFiles.SomaticVcfFile.isEmpty(),
-                        gender, copyNumbers, somaticStream.downsampledVariants(), sampleData.SvCache.variants(),
-                        fittedRegions, Lists.newArrayList(amberData.ChromosomeBafs.values()));
+                        gender, copyNumbers, somaticStream.plottingVariants(), sampleData.SvCache.variants(),
+                        regionsForVis, Lists.newArrayList(amberData.ChromosomeBafs.values()), driverSourceData);
 
                 // clean up any temporary files
                 // RChartData.cleanupFiles(mConfig, tumorId);
@@ -365,88 +387,23 @@ public class PurpleApplication
                 System.exit(1);
             }
         }
-
-        if(mConfig.RunDrivers)
-        {
-            findDrivers(tumorId, purityContext, geneCopyNumbers, somaticStream, germlineDeletions);
-        }
-    }
-
-    private void runDriversRoutine(final String tumorId) throws Exception
-    {
-        final String purpleDataPath = mConfig.OutputDir;
-        SomaticStream somaticStream = null;
-        GermlineDeletions germlineDeletions = null;
-
-        final PurityContext purityContext = PurityContextFile.read(purpleDataPath, tumorId);
-
-        final List<PurpleCopyNumber> copyNumbers = PurpleCopyNumberFile.read(
-                PurpleCopyNumberFile.generateFilenameForReading(purpleDataPath, tumorId));
-
-        final List<ObservedRegion> fittedRegions = SegmentFile.read(SegmentFile.generateFilename(purpleDataPath, tumorId));
-
-        final List<GeneCopyNumber> geneCopyNumbers = GeneCopyNumberFile.read(
-                GeneCopyNumberFile.generateFilename(purpleDataPath, tumorId));
-
-        if(mConfig.runTumor())
-        {
-            String somaticVcf = purpleSomaticVcfFile(purpleDataPath, tumorId);
-
-            SomaticVariantCache somaticVariantCache = new SomaticVariantCache(mConfig);
-            ListMultimap<Chromosome, VariantHotspot> emptyHotspots = ArrayListMultimap.create(); // already annotated in VCF
-            somaticVariantCache.loadSomatics(somaticVcf, emptyHotspots);
-
-            // the counts passed in here are only for down-sampling for charting, which is not relevant for drivers
-            somaticStream = new SomaticStream(mConfig, mReferenceData, somaticVariantCache);
-            somaticStream.registerReportedVariants();
-        }
-
-        if(mConfig.runGermline())
-        {
-            final String germlineVcf = purpleGermlineVcfFile(purpleDataPath, tumorId);
-
-            if(Files.exists(Paths.get(germlineVcf)))
-            {
-                mGermlineVariants.loadReportableVariants(germlineVcf);
-                PPL_LOGGER.info("loaded {} reportable germline variants", mGermlineVariants.reportableVariants().size());
-            }
-
-            // find germline deletions since these contribute to drivers
-            germlineDeletions = new GermlineDeletions(
-                    mReferenceData.DriverGenes.driverGenes(), mReferenceData.GeneTransCache, mReferenceData.CohortGermlineDeletions);
-
-            final String germlineSvVcf = purpleGermlineSvFile(purpleDataPath, tumorId);
-            final List<StructuralVariant> germlineSVs = Lists.newArrayList();
-
-            if(Files.exists(Paths.get(germlineSvVcf)))
-            {
-                GermlineSvCache germlineSvCache = new GermlineSvCache(
-                        mPurpleVersion.version(), germlineSvVcf, mReferenceData, mConfig,
-                        fittedRegions, copyNumbers, purityContext);
-
-                germlineSVs.addAll(germlineSvCache.variants());
-            }
-
-            germlineDeletions.findDeletions(copyNumbers, fittedRegions, germlineSVs);
-        }
-
-        findDrivers(tumorId, purityContext, geneCopyNumbers, somaticStream, germlineDeletions);
     }
 
     private void findDrivers(
-            final String tumorSample, final PurityContext purityContext,  final List<GeneCopyNumber> geneCopyNumbers,
-            @Nullable final SomaticStream somaticStream, @Nullable GermlineDeletions germlineDeletions) throws IOException
+            final String tumorSample, final PurityContext purityContext, final List<GeneCopyNumber> geneCopyNumbers,
+            @Nullable final SomaticStream somaticStream, @Nullable GermlineDeletions germlineDeletions,
+            final List<DriverSourceData> driverSourceData) throws IOException
     {
-        final List<DriverCatalog> somaticDriverCatalog = Lists.newArrayList();
-        final List<DriverCatalog> germlineDriverCatalog = Lists.newArrayList();
+        List<DriverCatalog> somaticDriverCatalog = Lists.newArrayList();
+        List<DriverCatalog> germlineDriverCatalog = Lists.newArrayList();
 
         PPL_LOGGER.info("generating drivers");
 
-        final Map<String,List<GeneCopyNumber>> geneCopyNumberMap = listToMap(geneCopyNumbers);
+        Map<String, List<GeneCopyNumber>> geneCopyNumberMap = listToMap(geneCopyNumbers);
 
         if(mConfig.runTumor())
         {
-            List<DriverCatalog> somaticDrivers = somaticStream.buildDrivers(geneCopyNumberMap);
+            List<DriverCatalog> somaticDrivers = somaticStream.buildDrivers(geneCopyNumberMap, driverSourceData);
 
             somaticDriverCatalog.addAll(somaticDrivers);
 
@@ -454,11 +411,17 @@ public class PurpleApplication
                     purityContext.qc().status(), purityContext.qc().amberGender(), mReferenceData.DriverGenes,
                     purityContext.bestFit().ploidy(), geneCopyNumbers, mConfig.TargetRegionsMode);
 
+            addGeneDriverSourceData(ampDrivers, geneCopyNumbers, driverSourceData);
+
             somaticDriverCatalog.addAll(ampDrivers);
 
-            final DeletionDrivers delDrivers = new DeletionDrivers(purityContext.qc().status(), mReferenceData.DriverGenes);
+            DeletionDrivers delDriverFinder = new DeletionDrivers(purityContext.qc().status(), mReferenceData.DriverGenes);
 
-            somaticDriverCatalog.addAll(delDrivers.deletions(geneCopyNumbers, mConfig.TargetRegionsMode));
+            List<DriverCatalog> delDrivers = delDriverFinder.deletions(geneCopyNumbers, mConfig.TargetRegionsMode);
+
+            somaticDriverCatalog.addAll(delDrivers);
+
+            addGeneDriverSourceData(delDrivers, geneCopyNumbers, driverSourceData);
 
             DriverCatalogFile.write(DriverCatalogFile.generateFilenameForWriting(mConfig.OutputDir, tumorSample, true), somaticDriverCatalog);
         }
@@ -469,21 +432,38 @@ public class PurpleApplication
             germlineDriverCatalog.addAll(germlineDrivers.findDrivers(mGermlineVariants.reportableVariants(), geneCopyNumberMap));
 
             if(germlineDeletions != null)
+            {
                 germlineDriverCatalog.addAll(germlineDeletions.getDrivers());
+            }
 
             DriverCatalogFile.write(DriverCatalogFile.generateFilenameForWriting(mConfig.OutputDir, tumorSample, false), germlineDriverCatalog);
         }
     }
 
+    private void addGeneDriverSourceData(
+            final List<DriverCatalog> geneDivers, final List<GeneCopyNumber> geneCopyNumbers, final List<DriverSourceData> driverSourceData)
+    {
+        for(DriverCatalog driverRecord : geneDivers)
+        {
+            GeneCopyNumber geneCopyNumber = geneCopyNumbers.stream()
+                    .filter(x -> x.geneName().equals(driverRecord.gene())).findFirst().orElse(null);
+
+            if(geneCopyNumber != null)
+            {
+                driverSourceData.add(new DriverSourceData(driverRecord, geneCopyNumber));
+            }
+        }
+    }
+
     private void writeEmptyResultFiles(
-            final String tumorId, final SampleData sampleData, final SampleDataFiles sampleDataFiles) throws IOException
+            final String tumorId, final SampleData sampleData, final SampleDataFiles sampleDataFiles,
+            final List<ObservedRegion> fittedRegions) throws IOException
     {
         Gender gender = Gender.FEMALE;
 
         if(mConfig.runTumor())
         {
-            SomaticVariantCache somaticCache = new SomaticVariantCache(mConfig);
-            SomaticStream somaticStream = new SomaticStream(mConfig, mReferenceData, somaticCache);
+            SomaticStream somaticStream = new SomaticStream(mConfig, mReferenceData, sampleData.SomaticCache);
             somaticStream.processAndWrite(null);
 
             sampleData.SvCache.write(null, Collections.emptyList(), mConfig.tumorOnlyMode(), gender);
@@ -492,11 +472,6 @@ public class PurpleApplication
             PurpleCopyNumberFile.write(PurpleCopyNumberFile.generateFilenameForWriting(mConfig.OutputDir, tumorId), Collections.emptyList());
             GeneCopyNumberFile.write(GeneCopyNumberFile.generateFilenameForWriting(mConfig.OutputDir, tumorId), Collections.emptyList());
             PeakModelFile.write(PeakModelFile.generateFilename(mConfig.OutputDir, tumorId), Collections.emptyList());
-
-            if(mReferenceData.TargetRegions.hasTargetRegions())
-            {
-                HrdDataFile.write(mConfig.OutputDir, tumorId, HrdData.INVALID);
-            }
 
             FittedPurity fittedPurity = ImmutableFittedPurity.builder()
                     .purity(0).ploidy(0).score(0).diploidProportion(0).normFactor(0).somaticPenalty(0).build();
@@ -507,9 +482,10 @@ public class PurpleApplication
             PurpleQC purpleQC = ImmutablePurpleQC.builder()
                     .method(FittedPurityMethod.NO_TUMOR).purity(0).contamination(0).cobaltGender(gender)
                     .unsupportedCopyNumberSegments(0).deletedGenes(0).amberGender(gender).lohPercent(0).copyNumberSegments(0)
-                    .status(Collections.emptyList()).germlineAberrations(Collections.emptyList()).amberMeanDepth(0).build();
+                    .status(List.of(FAIL_NO_TUMOR)).germlineAberrations(List.of(NONE)).amberMeanDepth(0)
+                    .tincLevel(0).chimerismPercentage(0).build();
 
-            PurityContext purityContext =  ImmutablePurityContext.builder()
+            PurityContext purityContext = ImmutablePurityContext.builder()
                     .bestFit(fittedPurity)
                     .method(FittedPurityMethod.NO_TUMOR)
                     .gender(gender)
@@ -529,16 +505,22 @@ public class PurpleApplication
                     .build();
 
             PurityContextFile.write(mConfig.OutputDir, tumorId, purityContext);
-            SegmentFile.write(SegmentFile.generateFilename(mConfig.OutputDir, tumorId), Collections.emptyList());
 
-            DriverCatalogFile.write(DriverCatalogFile.generateFilenameForWriting(mConfig.OutputDir, tumorId, true), Collections.emptyList());
+            List<PurpleSegment> segments = fittedRegions.stream().map(x -> x.toSegment()).collect(Collectors.toList());
+            PurpleSegment.write(PurpleSegment.generateFilename(mConfig.OutputDir, tumorId), segments);
+
+            DriverCatalogFile.write(DriverCatalogFile.generateFilenameForWriting(
+                    mConfig.OutputDir, tumorId, true), Collections.emptyList());
         }
 
         if(mConfig.runGermline())
         {
             if(!sampleDataFiles.GermlineSvVcfFile.isEmpty())
             {
-                GermlineSvCache germlineSvCache = new GermlineSvCache();
+                GermlineSvCache germlineSvCache = new GermlineSvCache(
+                        mPurpleVersion.version(), sampleDataFiles.GermlineSvVcfFile, mConfig,
+                        Collections.emptyList(), Collections.emptyList(), null);
+
                 germlineSvCache.write(purpleGermlineSvFile(mConfig.OutputDir, tumorId));
             }
 
